Fix word wrap inside table

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ table tr.header:hover {
 }
 td, th {
     padding: 0.375em;
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: break-word;
 }
 .dialogLine {
